# getting-started

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  pyproject.toml  renovate.json  service_definition.yaml
.amazonq/agents/: default.json
.claude/: settings.json
.continue/mcpServers/: zenable.yaml
.continue/rules/: zenable.md
.cursor/: mcp.json
.cursor/rules/: project.mdc  testing.mdc  zenable.mdc
.gemini/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  project.yml
.github/actions/bootstrap/: action.yml
.github/etc/: dictionary.txt
.github/linters/: lychee.toml
.github/workflows/: ci.yml  commit.yml  release.yml  security.yml  update.yml
.kiro/steering/: zenable.md
.roo/: mcp.json
src/: main.py
src/getting_started/: __init__.py  config.py  constants.py  customers.py  encryption.py  guardrails.py  postgres.py
tests/: test_config.py  test_customers.py  test_encryption.py  test_integration.py  test_main.py  test_package.py
